--- a/app.conf
+++ b/app.conf
@@ -18,7 +18,7 @@ upstream api_gateway_node {
             deny all;
         }
 
-        # serve static (compiled) assets directly if they exist (for node production)
+        # serve stati (compiled) assets directly if they exist (for node production)
         location ~ ^/(assets|images|javascripts|stylesheets|swfs|system)/ {
             try_files $uri @api_gateway_node;
 
